# EfficientPngLoading

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp  main.h
EPL/: parsing_chunks.cpp  parsing_chunks.h  png_properties.cpp  png_properties.h
